[tool.poetry]
name = "polarsteps-book"
version = "0.1.0"
description = ""
authors = ["Liana Wobben"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.2"
pyogrio = "^0.7.2"
contextily = "^1.5.0"
fpdf2 = "^2.7.7"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
