[tool.poetry]
name = "polarsteps-book"
version = "0.1.0"
description = ""
authors = ["Liana Wobben"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.2"
pyogrio = "^0.7.2"
contextily = "^1.5.0"
fpdf2 = "^2.7.7"
pillow = "^10.2.0"
basemap = "^1.4.1"
pycountry = "^23.12.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
